[project]
name = "tms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "cap-ml @ git+https://github.com/lorenzovolpi/cap-ml.git",
    "pandatex",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.uv.sources]
pandatex = { git = "https://github.com/lorenzovolpi/pandatex.git" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

